pushed alternate install's needed mod to the top

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
             <div class="option alternative-option" style="display: none;">
                 <ul>
                     <li>
+                        <h4>Necessary Mod Download</h4>
+                        <p><a href="https://modrinth.com/mod/sodium/version/mc1.19.2-0.4.4?hl=en-US">Sodium Mod Page</a></p>
+                    </li>
+                    <li>
                         <h4>Step 1 - Download Alternative Version of the Pack</h4>
                         <p><a href="./Instances/JoobsPack-LiteAlt.zip" download>Alternative pack download here</a> or in Download section as Alternative Launcher Download. The alternative version of the pack doesn't include a couple mods that can't be downloaded with third party apps.</p>
                     </li>
