--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="download-pane">
             <div class="download-option" style="pointer-events: none; opacity: 0.5;">
                 <h3>Full</h3>
-                <a href="./Instances/JoobsPack-Normal.zip"><button class="download-button" id="full-download">Download</button></a>
+                <a href="https://www.curseforge.com/minecraft/modpacks/joobs-modpack"><button class="download-button" id="full-download">Download</button></a>
                 <p>The full version of the mod, including all features and content. Suitable for single player and lan worlds.</p>
             </div>
             <div class="download-option lite">
                 <h3>Lite</h3>
-                <a href="https://www.curseforge.com/minecraft/modpacks/joobs-modpack/install/4695814" download><button class="download-button" id="lite-download">Download</button></a>
+                <a href="https://www.curseforge.com/minecraft/modpacks/joobs-modpack/install/4750792" download><button class="download-button" id="lite-download">Download</button></a>
                 <a href="./Instances/JoobsPack-LiteAlt.zip" download>Alternate Launchers Download</a>
                 <p>A lightweight version of the mod, with some mods not required for the client stripped away.</p>
                 <p class="highlighted">Recommended for playing on servers!</p>
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                         <h4>Step 2 - Downloading The Pack</h4>
-                        <p>Download the <a href="./Instances/JoobsPack-Lite.zip">Lite Modpack here</a> or via the download button above. You don't have to unzip it.</p>
+                        <p>Download the <a href="https://www.curseforge.com/minecraft/modpacks/joobs-modpack/install/4750792">Lite Modpack here</a> or via the download button above. You don't have to unzip it.</p>
                         <!-- <img src="instruction2.png" alt="Instruction 2"> -->
                     </li>
                     <li>
